[package]
name = "repr_macros"
version = "0.0.1"
authors = ["Igor Kotrasiński <i.kotrasinsk@samsung.com>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
syn = { version = "1.0", features = ["full", "visit-mut"] }

[dev-dependencies]
syn = { version = "*", features = ["extra-traits"] }
