[package]
name = "isrepr_macros"
description = "Proc-macro crate for 'isrepr' crate"
homepage = "https://github.com/Samsung/rust-repr"
repository = "https://github.com/Samsung/rust-repr"
version = "0.1.0"
edition = "2021"
authors = ["Igor Kotrasiński <i.kotrasinsk@samsung.com>"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
syn = { version = "1.0", features = ["full", "visit-mut"] }

[dev-dependencies]
syn = { version = "1.0", features = ["extra-traits"] }
